Added about page link to all relevant pages

--- a/public/about.html
+++ b/public/about.html
@@ -3,61 +3,55 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About</title>
+  <title>Home</title>
   <link href="style.css" rel="stylesheet" />
   <link href="./chatbot/chatbot.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-  <nav class="topnav">
-    <a class="active" href="./index.html">Home</a>
-    <a href="./latest_news.html">Latest Financial News</a>
-    <a href="./contact.html">Contact Us</a>
-    <div class="dropdown">
-      <button class="dropbtn">Stocks
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="./adobe.html">Adobe</a>
-        <a href="./amazon.html">Amazon</a>
-        <a href="./apple.html">Apple</a>
-        <a href="./google.html">Google</a>
-        <a href="./msft.html">MicroSoft</a>
+<nav class="topnav">
+      <a class="active" href="./index.html">Home</a>
+      <a href="./about.html">About</a>
+      <a href="./latest_news.html">Latest Financial News</a>
+      <a href="./contact.html">Contact Us</a>
+      <div class="dropdown">
+        <button class="dropbtn">Stocks
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="./adobe.html">Adobe</a>
+          <a href="./amazon.html">Amazon</a>
+          <a href="./apple.html">Apple</a>
+          <a href="./google.html">Google</a>
+          <a href="./msft.html">MicroSoft</a>
+        </div>
       </div>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">Crypto Assets
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="./bitcoin.html">Bitcoin</a>
-        <a href="./ethereum.html">Ethereum</a>
+      <div class="dropdown">
+        <button class="dropbtn">Crypto Assets
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="./bitcoin.html">Bitcoin</a>
+          <a href="./ethereum.html">Ethereum</a>
+        </div>
       </div>
+    <div id = "loginLink">
+      <a href="./register_login.html" id="login">Login or Register</a>
     </div>
-  <div id = "loginLink">
-    <a href="./register_login.html" id="login">Login or Register</a>
-  </div>
-</nav>
+  </nav>
   
-  <section class = "below-splash-main">
-    <p>
-        The cost of living crisis has created widespread disruption in society. As the crisis deeps, it is anticipated that customers 
-        will seek value in every facet of their lives from basic foods to advanced financial services. Brokerages, providing 
-        financial services, are particularly exposed to economic downturns since a large part of their business involves investing 
-        with consumers’ discretionary income. 
-         <br><br>
-        Rather than relying on high-paid stock brokers to advise clients, new technology enables cheaper and more accurate 
-        advice through the use of AI and appropriate datasets of financial information.
+   <section class="splash-main-index">
+    <p>FINTECH TRADING <br>- START YOUR INVESTMENTS TODAY!</p>
+  </section>
+
+  <section class="below-splash-main">
+    <p>We are a group of third year Students studying Software Development at Munster Technological University.
+    <br> Our names are Aaron Canty, Alannah Cullinane Cooney, Cian Herihly and Róisín Suarez and this is a Crypto
+    Currency website that we have created to buy and sell stocks as well as become a broker. 
     </p>
-    </section>
-<footer>Year 3 Group Project - <br> Munster Technological University
-    <ul class="footer-list">
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./register_login.html">Login or Register</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-    </ul>
-</footer>
+  </section>
+<footer>Year 3 Group Project for<br> Munster Technological University
+  </footer>
 </body>
 </html>
