--- a/public/bitcoin.html
+++ b/public/bitcoin.html
@@ -12,6 +12,7 @@
 <body>
   <nav class="topnav">
     <a class="active" href="./index.html">Home</a>
+    <a href="./about.html">About</a>
     <a href="./latest_news.html">Latest Financial News</a>
     <a href="./contact.html">Contact Us</a>
     <div class="dropdown">
@@ -71,12 +72,6 @@
 <br>
 
 <footer>Year 3 Group Project - <br> Munster Technological University
-  <ul class="footer-list">
-    <li><a href="./index.html">Home</a></li>
-    <li><a href="./register_login.html">Login or Register</a></li>
-    <li><a href="./about.html">About</a></li>
-    <li><a href="./contact.html">Contact</a></li>
-  </ul>
   </footer>
 </body>
 </html>
