Tidied up footer for web pages

--- a/public/about.html
+++ b/public/about.html
@@ -51,7 +51,8 @@
     Currency website that we have created to buy and sell stocks as well as become a broker. 
     </p>
   </section>
-<footer>Year 3 Group Project for<br> Munster Technological University
+<footer>
+  &copy;Year 3 Group Project @ MTU 2022-2023
   </footer>
 </body>
 </html>
