--- a/public/bitcoin.html
+++ b/public/bitcoin.html
@@ -71,7 +71,8 @@
 <br>
 <br>
 
-<footer>Year 3 Group Project - <br> Munster Technological University
+<footer>
+  &copy;Year 3 Group Project @ MTU 2022-2023
   </footer>
 </body>
 </html>
