--- a/public/latest_news.html
+++ b/public/latest_news.html
@@ -56,7 +56,27 @@
     <a class="twitter-timeline" href="https://twitter.com/IBDinvestors?ref_src=twsrc%5Etfw">Tweets by IBDinvestors</a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </section>
-  <footer>Year 3 Group Project - <br> Munster Technological University
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <footer>
     </footer>
   </body>
   </html>
