--- a/public/apple.html
+++ b/public/apple.html
@@ -70,7 +70,8 @@
 <br>
 <br>
 <br>
-<footer>Year 3 Group Project - <br> Munster Technological University
+<footer>
+  &copy;Year 3 Group Project @ MTU 2022-2023
   </footer>
 </body>
 </html>
