Cleaned up home page

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,9 @@
   </section>
 
   <section class="below-splash-main">
-    <p></p>
+    <p>Welcome to FinTech Trading where your trading journey begins here! At FinTech Trading you are able to
+      buy and sell 5 different Stocks as well as buy and sell two different Crypto Assets! Catch up with the 
+      latest Financial news to see what is happening in the world of Stocks and Crypo Assets! 
   </section>
 <footer>
   &copy;Year 3 Group Project @ MTU 2022-2023
