--- a/public/latest_news.html
+++ b/public/latest_news.html
@@ -13,17 +13,36 @@
     <a href="./latest_news.html">Latest Financial News</a>
     <a href="./contact.html">Contact Us</a>
     <a href="./membership.html">Membership Options</a>
-
-    <div id="loginLink">
-      <a href="./register_login.html" id="login">Login or Register</a>
+    <div class="dropdown">
+      <button class="dropbtn">Stocks
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="./adobe.html">Adobe</a>
+        <a href="./amazon.html">Amazon</a>
+        <a href="./apple.html">Apple</a>
+        <a href="./google.html">Google</a>
+        <a href="./msft.html">MicroSoft</a>
+      </div>
     </div>
-  </nav>
+    <div class="dropdown">
+      <button class="dropbtn">Crypto Assets
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="./bitcoin.html">Bitcoin</a>
+        <a href="./ethereum.html">Ethereum</a>
+      </div>
+    </div>
+  <div id = "loginLink">
+    <a href="./register_login.html" id="login">Login or Register</a>
+  </div>
+</nav>
 
 
   <section class="splash-main">
     <p>Latest Financial News</p>
-    <img class="financial-info" alt="Newspaper"
-      src="https://thumbs.dreamstime.com/z/finance-concept-newspaper-headline-financial-information-finance-concept-newspaper-headline-financial-information-white-121636792.jpg">
+    
   </section>
 
   <section class="below-splash-main">
