--- a/public/contact.html
+++ b/public/contact.html
@@ -9,15 +9,35 @@
 
 <body>
   <nav class="topnav">
-      <a class="active" href="./index.html">Home</a>
-      <a href="./latest_news.html">Latest Financial News</a>
-      <a href="./contact.html">Contact Us</a>
-      <a href="./membership.html">Membership Options</a>
-
-    <div id = "loginLink">
-      <a href="./register_login.html" id="login">Login or Register</a>
+    <a class="active" href="./index.html">Home</a>
+    <a href="./latest_news.html">Latest Financial News</a>
+    <a href="./contact.html">Contact Us</a>
+    <a href="./membership.html">Membership Options</a>
+    <div class="dropdown">
+      <button class="dropbtn">Stocks
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="./adobe.html">Adobe</a>
+        <a href="./amazon.html">Amazon</a>
+        <a href="./apple.html">Apple</a>
+        <a href="./google.html">Google</a>
+        <a href="./msft.html">MicroSoft</a>
+      </div>
     </div>
-  </nav>
+    <div class="dropdown">
+      <button class="dropbtn">Crypto Assets
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="./bitcoin.html">Bitcoin</a>
+        <a href="./ethereum.html">Ethereum</a>
+      </div>
+    </div>
+  <div id = "loginLink">
+    <a href="./register_login.html" id="login">Login or Register</a>
+  </div>
+</nav>
   <section class = "splash-main">
     <p>CONTACT US</p>
     <p id="contact-form-p">Do you have any queries? Please let us know by filling 
