--- a/public/register_login.html
+++ b/public/register_login.html
@@ -13,12 +13,35 @@
 <body>
   <nav class="topnav">
     <a class="active" href="./index.html">Home</a>
+    <a href="./about.html">About</a>
     <a href="./latest_news.html">Latest Financial News</a>
     <a href="./contact.html">Contact Us</a>
-    <div id="loginLink">
-      <a href="./register_login.html" id="login">Sign In / Sign Up</a>
+    <a href="./membership.html">Membership Options</a>
+    <div class="dropdown">
+      <button class="dropbtn">Stocks
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="./adobe.html">Adobe</a>
+        <a href="./amazon.html">Amazon</a>
+        <a href="./apple.html">Apple</a>
+        <a href="./google.html">Google</a>
+        <a href="./msft.html">MicroSoft</a>
+      </div>
     </div>
-  </nav>
+    <div class="dropdown">
+      <button class="dropbtn">Crypto Assets
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="./bitcoin.html">Bitcoin</a>
+        <a href="./ethereum.html">Ethereum</a>
+      </div>
+    </div>
+  <div id = "loginLink">
+    <a href="./register_login.html" id="login">Login or Register</a>
+  </div>
+</nav>
   <section class="splash-main">
     <p>REGISTER</p>
     <form>
@@ -32,9 +55,11 @@
         <input type="password" placeholder="Password" name="pass" id="pass" required>
         <hr>
         <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-        <div class="loginRegisterBtns"><button type="button" id="loginBtn" name="loginUser" class="loginbtn">Login</button>
-        <button type="button" id="submitData" name="submitData" class="registerbtn">Register</button>
-        <button id="googleLogin">Login with Google</button></div>
+        <div class="loginRegisterBtns"><button type="button" id="loginBtn" name="loginUser"
+            class="loginbtn">Login</button>
+          <button type="button" id="submitData" name="submitData" class="registerbtn">Register</button>
+          <button id="googleLogin">Login with Google</button>
+        </div>
       </div>
       </div>
     </form>
@@ -68,27 +93,29 @@
 </html>
 
 <script type="module">
-  import { 
-    initializeApp 
-  
-} from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
+  import {
+    initializeApp
+
+  } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
 
   import {
+    GoogleAuthProvider,
     getAuth,
     createUserWithEmailAndPassword,
     signInWithEmailAndPassword,
+    signInWithPopup,
     signOut
   } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js";
 
-  import { 
-    getDatabase, 
+  import {
+    getDatabase,
     set,
     ref,
-    update } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js";
+    update
+  } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js";
 
   const firebaseConfig = {
 
-    databaseURL: "https://year-3-group-project-default-rtdb.europe-west1.firebasedatabase.app",
     apiKey: "AIzaSyDo2rpRZv9SlKaSINJwpN5Znf0684sccW4",
     authDomain: "year-3-group-project.firebaseapp.com",
     databaseURL: "https://year-3-group-project-default-rtdb.europe-west1.firebasedatabase.app",
@@ -97,86 +124,148 @@
     messagingSenderId: "345845091768",
     appId: "1:345845091768:web:08424889bff275e341934d",
     measurementId: "G-E53ZGGY217"
+
   };
+  if (!firebase.apps.length) {
+    firebase.initializeApp(firebaseConfig)
+  }
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
-    const auth = getAuth();
-    const database = getDatabase(app);
+  const auth = getAuth();
+  const database = getDatabase(app);
 
-    submitData.addEventListener('click', (e) => {
 
-        var email = document.getElementById('email').value;
-        var password = document.getElementById('pass').value;
+  // let provider = new firebase.auth.GoogleAuthProvider();
+  // document.getElementById('googleLogin').addEventListener('click', GoogleLogin);
 
-        //sign up user
-        createUserWithEmailAndPassword(auth, email, password)
-            .then((userCredential) => {
-                // Signed in
-                const user = userCredential.user;
-                // ... user.uid
-                set(ref(database, 'users/' + user.uid), {
-                    email: email,
-                    password: password
-                })
-                    .then(() => {
-                        // Data saved successfully!
-                        alert('user created successfully');
-        
-                    })
-                    .catch((error) => {
-                        // The write failed...
-                        alert(error);
-                    });
-            })
-            .catch((error) => {
-                const errorCode = error.code;
-                const errorMessage = error.message;
-                // ..
-                alert(errorMessage);
-            });
+  // function GoogleLogin() {
+  //   signInWithPopup(auth, provider)
+  // .then((result) => {
+  //   // This gives you a Google Access Token. You can use it to access the Google API.
+  //   const credential = GoogleAuthProvider.credentialFromResult(result);
+  //   const token = credential.accessToken;
+  //   // The signed-in user info.
+  //   const user = result.user;
+  //   // ...
+  // }).catch((error) => {
+  //   // Handle Errors here.
+  //   const errorCode = error.code;
+  //   const errorMessage = error.message;
+  //   // The email of the user's account used.
+  //   const email = error.customData.email;
+  //   // The AuthCredential type that was used.
+  //   const credential = GoogleAuthProvider.credentialFromError(error);
+  //   // ...
+  // });
+  // };
+
+  googleLogin.addEventListener('click', (e) => {
+
+
+
+const provider = new GoogleAuthProvider();
+//sign up user
+signInWithPopup(auth, provider)
+.then((result) => {
+    // This gives you a Google Access Token. You can use it to access the Google API.
+    const credential = GoogleAuthProvider.credentialFromResult(result);
+    const token = credential.accessToken;
+    // The signed-in user info.
+    const user = result.user;
+    window.location.assign('./latest_news.html')
+s
+    // ...
+  }).catch((error) => {
+    // Handle Errors here.
+    const errorCode = error.code;
+    const errorMessage = error.message;
+    // The email of the user's account used.
+    const email = error.customData.email;
+    // The AuthCredential type that was used.
+    const credential = GoogleAuthProvider.credentialFromError(error);
+    
+    // ...
+  });
+});
+
+  submitData.addEventListener('click', (e) => {
+
+    var email = document.getElementById('email').value;
+    var password = document.getElementById('pass').value;
+
+    //sign up user
+    createUserWithEmailAndPassword(auth, email, password)
+      .then((userCredential) => {
+        // Signed in
+        const user = userCredential.user;
+        // ... user.uid
+        set(ref(database, 'users/' + user.uid), {
+          email: email,
+          password: password
+        })
+          .then(() => {
+            // Data saved successfully!
+            alert('User was created successfully');
+            window.location.assign('./latest_news.html')
+
+
+          })
+          .catch((error) => {
+            // The write failed...
+            alert(error);
           });
+      })
+      .catch((error) => {
+        const errorCode = error.code;
+        const errorMessage = error.message;
+        // ..
+        alert(errorMessage);
+      });
+  });
 
-          loginBtn.addEventListener('click', (e) => {
+  loginBtn.addEventListener('click', (e) => {
 
-var email = document.getElementById('email').value;
-var password = document.getElementById('pass').value;
-        // log in user
-        signInWithEmailAndPassword(auth, email, password)
-            .then((userCredential) => {
-                // Signed in
-                const user = userCredential.user;
-                // ...
+    var email = document.getElementById('email').value;
+    var password = document.getElementById('pass').value;
+    // log in user
+    signInWithEmailAndPassword(auth, email, password)
+      .then((userCredential) => {
+        // Signed in
+        const user = userCredential.user;
+        // ...
 
-                // save log in details into real time database
-                var lgDate = new Date();
-                update(ref(database, 'users/' + user.uid), {
-                    last_login: lgDate,
-                })
-                    .then(() => {
-                        // Data saved successfully!
-                        alert('user logged in successfully');
-                        window.location.assign('./profile.html')
+        // save log in details into real time database
+        var lgDate = new Date();
+        update(ref(database, 'users/' + user.uid), {
+          last_login: lgDate,
+        })
+          .then(() => {
+            // Data saved successfully!
+            alert('User was logged in successfully.');
 
-                    })
-                    .catch((error) => {
-                        // The write failed...
-                        alert(error);
-                    });
-            })
-            .catch((error) => {
-                const errorCode = error.code;
-                const errorMessage = error.message;
-                alert("signinerror");
-            });
+            window.location.assign('./latest_news.html')
 
-        //sign out user
-        signOut(auth).then(() => {
-               // Sign-out successful.
-        }).catch((error) => {
-            // An error happened.
-        });
+          })
+          .catch((error) => {
+            // The write failed...
+            alert(error);
+          });
+      })
+      .catch((error) => {
+        const errorCode = error.code;
+        const errorMessage = error.message;
+        alert("Sign In Error");
+      });
+
+    //sign out user
+    signOut(auth).then(() => {
+      // Sign-out successful.
+    }).catch((error) => {
+      // An error happened.
     });
+  });
+
 </script>
 </body>
 
