--- a/public/index.html
+++ b/public/index.html
@@ -48,14 +48,14 @@
   <section class="below-splash-main">
     <p>Welcome to FinTech Trading where your trading journey begins here! At FinTech Trading you are able to
       buy and sell 5 different Stocks as well as buy and sell two different Crypto Assets! Catch up with the 
-      latest Financial news to see what is happening in the world of Stocks and Crypo Assets! </p>
+      latest Financial news to see what is happening in the world of Stocks and Crypo Assets! <br><br>
+    Aaron Canty, Cian Herlihy, Alannah Cooney, Roisin Suarez - SD3A</p>
   </section>
 
 <footer>Year 3 Group Project - <br> Munster Technological University
   <ul class="footer-list">
     <li><a href="./index.html">Home</a></li>
     <li><a href="./register_login.html">Login or Register</a></li>
-    <li><a href="./about.html">About</a></li>
     <li><a href="./contact.html">Contact</a></li>
   
   </ul>
