--- a/public/register_login.html
+++ b/public/register_login.html
@@ -13,7 +13,6 @@
 <body>
   <nav class="topnav">
     <a class="active" href="./index.html">Home</a>
-    <a href="./about.html">About</a>
     <a href="./latest_news.html">Latest Financial News</a>
     <a href="./contact.html">Contact Us</a>
     <a href="./membership.html">Membership Options</a>
@@ -66,21 +65,13 @@
   </section>
 
   <section class="below-splash-main">
-    <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque
-      corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
-      qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
-      distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
-      placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut
-      officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non
-      recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias
-      consequatur aut perferendis doloribus asperiores repellat."</p>
+    <p>Log in as a regular user, or log in with Google.</p>
   </section>
 
   <footer>Year 3 Group Project - <br> Munster Technological University
     <ul class="footer-list">
       <li><a href="./index.html">Home</a></li>
       <li><a href="./register_login.html">Login or Register</a></li>
-      <li><a href="./about.html">About</a></li>
       <li><a href="./contact.html">Contact</a></li>
       <a href="./membership.html">Membership Options</a>
 
